--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,9 @@
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "jquery": "~1.11.0",
-    "bootstrap": "~3.0.3"
+    "bootstrap": "~3.0.3",
+    "d3": "~3.4.5",
+    "angular-loading-bar": "~0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
