--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "jquery": "~1.11.0",
     "bootstrap": "~3.1.1",
     "d3": "~3.4.5",
-    "angular-loading-bar": "~0.3.0"
+    "angular-loading-bar": "~0.3.0",
+    "angular-chosen-localytics": "~1.0.6"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
