--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "bootstrap": "~3.1.1",
     "d3": "~3.4.5",
     "angular-loading-bar": "~0.3.0",
-    "angular-chosen-localytics": "~1.0.6"
+    "angular-chosen-localytics": "~1.0.6",
+    "angular-snap": "~1.4.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
