--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-loading-bar": "~0.3.0",
     "angular-chosen-localytics": "~1.0.6",
     "angular-snap": "~1.4.1",
-    "d3-tip": "~0.6.4"
+    "d3-tip": "~0.6.4",
+    "angular-local-storage": "~0.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
