--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-chosen-localytics": "~1.0.6",
     "angular-snap": "~1.4.1",
     "d3-tip": "~0.6.4",
-    "angular-local-storage": "~0.0.1"
+    "angular-local-storage": "~0.0.1",
+    "angular-bootstrap": "~0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
