--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-snap": "~1.4.1",
     "d3-tip": "~0.6.4",
     "angular-bootstrap": "~0.10.0",
-    "angular-local-storage": "https://github.com/Hypercubed/angular-local-storage.git#feature/bind"
+    "angular-local-storage": "https://github.com/Hypercubed/angular-local-storage.git#feature/bind",
+    "angular-ui-router": "~0.2.10"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
