--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-local-storage": "https://github.com/Hypercubed/angular-local-storage.git#feature/bind",
     "angular-ui-router": "~0.2.10",
     "ng-debounce": "~0.1.1",
-    "d3-plugins": "*"
+    "d3-plugins": "*",
+    "angular-downloadsvg-directive": "~0.0.4"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
