--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,9 @@
     "angular-ui-router": "~0.2.10",
     "ng-debounce": "~0.1.1",
     "d3-plugins": "*",
-    "angular-downloadsvg-directive": "~0.0.4"
+    "angular-downloadsvg-directive": "~0.0.4",
+    "angular-growl": "~0.4.0",
+    "angular-animate": "~1.2.16"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
@@ -30,5 +32,8 @@
         "chosen.css"
       ]
     }
+  },
+  "resolutions": {
+    "angular": "1.2.15"
   }
 }
