--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
     "angular-downloadsvg-directive": "~0.0.4",
     "angular-growl": "~0.4.0",
     "angular-animate": "~1.2.16",
-    "angular-slider-widget": "~1.2.16",
+    "angular-slider-widget": "Hypercubed/angular-slider-widget#~0.0.2",
     "angular-local-storage": "https://github.com/grevory/angular-local-storage.git#master"
   },
   "devDependencies": {
