--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-growl": "~0.4.0",
     "angular-animate": "~1.2.16",
     "angular-slider-widget": "Hypercubed/angular-slider-widget#~0.0.2",
-    "angular-local-storage": "https://github.com/grevory/angular-local-storage.git#master"
+    "angular-local-storage": "https://github.com/grevory/angular-local-storage.git#master",
+    "_F": "Hypercubed/_F#~0.0.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
