--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,6 @@
     "bootstrap": "~3.1.1",
     "d3": "~3.4.5",
     "angular-loading-bar": "~0.3.0",
-    "angular-chosen-localytics": "~1.0.6",
     "angular-snap": "~1.4.1",
     "d3-tip": "~0.6.4",
     "angular-bootstrap": "~0.10.0",
@@ -22,17 +21,29 @@
     "angular-slider-widget": "Hypercubed/angular-slider-widget#~0.0.2",
     "angular-local-storage": "https://github.com/grevory/angular-local-storage.git#master",
     "_F": "Hypercubed/_F#~0.0.2",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "isteven-angular-multiselect": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
     "angular-scenario": "1.2.15"
   },
   "overrides": {
-    "chosen": {
+    "isteven-angular-multiselect": {
       "main": [
-        "chosen.jquery.js",
-        "chosen.css"
+        "angular-multi-select.js",
+        "angular-multi-select.css"
+      ]
+    },
+    "d3-plugins": {
+      "main": [
+        "hive/hive.js"
+      ]
+    },
+    "angular-growl": {
+      "main": [
+        "./build/angular-growl.js",
+        "./build/angular-growl.min.css"
       ]
     }
   },
