--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "_F": "Hypercubed/_F#~0.0.2",
     "lodash": "~2.4.1",
     "isteven-angular-multiselect": "~1.1.0",
-    "angular-dsv": "~0.0.4"
+    "angular-dsv": "~0.0.4",
+    "angular-sanitize": "~1.2.18"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
@@ -49,6 +50,6 @@
     }
   },
   "resolutions": {
-    "angular": "1.2.15"
+    "angular": "1.2.18"
   }
 }
