--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "lodash": "~2.4.1",
     "isteven-angular-multiselect": "1.2.0",
     "angular-dsv": "~0.0.4",
-    "angular-sanitize": "~1.2.18"
+    "angular-sanitize": "~1.2.18",
+    "angular-bindonce": "~0.3.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
