--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "lr-spa",
-  "version": "0.0.0",
+  "name": "lrspa",
+  "version": "0.0.3",
   "dependencies": {
     "angular": "1.2.15",
     "json3": "~3.2.6",
