--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,9 @@
     "angular-dsv": "~0.0.4",
     "angular-sanitize": "~1.2.18",
     "angular-bindonce": "~0.3.1",
-    "ng-context-menu": "~0.1.4"
+    "ng-context-menu": "~0.1.4",
+    "ng-table": "~0.3.3",
+    "ng-grid": "~2.0.12"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
@@ -56,6 +58,6 @@
     }
   },
   "resolutions": {
-    "angular": "~1.2.0"
+    "angular": "1.2.18"
   }
 }
