--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "angular-sanitize": "~1.2.18",
     "angular-bindonce": "~0.3.1",
     "ng-context-menu": "~0.1.4",
-    "ng-grid": "~2.0.12"
+    "ng-grid": "~2.0.12",
+    "angular-marked": "~0.0.12"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
@@ -42,6 +43,11 @@
     "d3-plugins": {
       "main": [
         "hive/hive.js"
+      ]
+    },
+    "marked": {
+      "main": [
+        "lib/marked.js"
       ]
     },
     "angular-growl": {
