Improved search tools

--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "ng-context-menu": "~0.1.4",
     "ng-grid": "~2.0.12",
     "angular-marked": "~0.0.12",
-    "angular-ui-select2": "~0.0.5"
+    "angular-ui-select2": "~0.0.5",
+    "font-awesome": "~4.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
