--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "angular-marked": "~0.0.12",
     "angular-ui-select2": "~0.0.5",
     "font-awesome": "~4.1.0",
-    "Blob.js": "eligrey/Blob.js"
+    "Blob.js": "eligrey/Blob.js",
+    "js-base64": "~2.1.5"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
