--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "angular-marked": "~0.0.12",
     "angular-ui-select2": "~0.0.5",
     "font-awesome": "~4.1.0",
-    "Blob.js": "eligrey/Blob.js"
+    "Blob.js": "eligrey/Blob.js",
+    "angular-chosen-localytics": "~1.0.6"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
@@ -62,6 +63,12 @@
     "ng-context-menu": {
       "main": [
         "dist/ng-context-menu.js"
+      ]
+    },
+    "chosen": {
+      "main": [
+        "chosen.jquery.js",
+        "chosen.css"
       ]
     },
     "Blob.js": {
