--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "font-awesome": "~4.1.0",
     "Blob.js": "eligrey/Blob.js",
     "js-base64": "~2.1.5",
-    "angular-chosen-localytics": "~1.0.6"
+    "angular-chosen-localytics": "~1.0.6",
+    "ng-clip": "~0.2.2"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
@@ -79,6 +80,6 @@
     }
   },
   "resolutions": {
-    "angular": ">=1.2.0"
+    "angular": "~1.2.0"
   }
 }
