--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "lrspa",
   "version": "0.0.7",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
@@ -18,24 +17,25 @@
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
+    "grunt-gh-pages": "^0.10.0",
     "grunt-google-cdn": "~0.2.0",
+    "grunt-karma": "^0.8.2",
     "grunt-newer": "~0.6.1",
     "grunt-ngmin": "~0.0.2",
     "grunt-rev": "~0.1.0",
+    "grunt-rsync": "^0.5.0",
     "grunt-svgmin": "~0.2.0",
     "grunt-usemin": "~2.0.0",
     "jshint-stylish": "~0.1.3",
-    "load-grunt-tasks": "~0.4.0",
-    "time-grunt": "~0.2.1",
-    "karma-ng-scenario": "^0.1.0",
-    "grunt-karma": "^0.8.2",
     "karma": "^0.12.6",
-    "karma-ng-html2js-preprocessor": "^0.1.0",
-    "grunt-rsync": "^0.5.0",
     "karma-jasmine": "^0.1.5",
     "karma-mocha-reporter": "^0.3.1",
+    "karma-ng-html2js-preprocessor": "^0.1.0",
+    "karma-ng-scenario": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
-    "phantomjs": "^1.9.7-15"
+    "load-grunt-tasks": "~0.4.0",
+    "phantomjs": "^1.9.7-15",
+    "time-grunt": "~0.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
